--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Ströer MetaTag Tests</title>
 </head>
+
 <body>
 
 <h1>Ströer MetaTag Tests</h1>
@@ -10,11 +12,9 @@
 
 <ul>
     <li><a href="complete_configuration.html">Vollständige Konfiguration</a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
+    <li><a href="hockeystick_left.html">Hockeystick Links</a></li>
 </ul>
 
 </body>
+
 </html>
