--- a/src/complete_configuration.html
+++ b/src/complete_configuration.html
@@ -32,32 +32,42 @@
         </script>
     </div>
 
-    <nav>Navigation</nav>
+    <nav><h3>Navigation</h3></nav>
 
     <hr />
 
     <main id="mainContent" class="contentWidth floatsLeft">
-        <p>Be careful, or I will spill the beans on your placeholder text. Does everybody know that pig named Lorem Ipsum? She's a disgusting pig, right? That other text? Sadly, it’s no longer a 10.</p>
+        <h3>Content</h3>
 
-        <div id="adInContent">
+        <p>Paragraph 1: Be careful, or I will spill the beans on your placeholder text. Does everybody know that pig named Lorem Ipsum? She's a disgusting pig, right? That other text? Sadly, it’s no longer a 10.</p>
+
+        <div id="adAfterP1">
             <script type="text/javascript">
 				SDG.Publisher
-					.registerSlot('mrec', document.getElementById('adInContent'))
+					.registerSlot('mrec', document.getElementById('adAfterP1'))
             </script>
         </div>
 
-        <p>Some people have an ability to write placeholder text... It's an art you're basically born with. You either have it or you don't. I think my strongest asset maybe by far is my temperament. I have a placeholding temperament.</p>
+        <p>Paragraph 2: Some people have an ability to write placeholder text... It's an art you're basically born with. You either have it or you don't. I think my strongest asset maybe by far is my temperament. I have a placeholding temperament.</p>
 
-        <p>You’re disgusting. An 'extremely credible source' has called my office and told me that Lorem Ipsum's birth certificate is a fraud. All of the words in Lorem Ipsum have flirted with me - consciously or unconsciously. That's to be expected.</p>
+        <p>Paragraph 3: You’re disgusting. An 'extremely credible source' has called my office and told me that Lorem Ipsum's birth certificate is a fraud. All of the words in Lorem Ipsum have flirted with me - consciously or unconsciously. That's to be expected.</p>
 
-        <p>You're telling the enemy exactly what you're going to do. No wonder you've been fighting Lorem Ipsum your entire adult life. You're telling the enemy exactly what you're going to do. No wonder you've been fighting Lorem Ipsum your entire adult life.</p>
+        <div id="adAfterP3">
+            <script type="text/javascript">
+				SDG.Publisher
+					.registerSlot('mrec', document.getElementById('adAfterP3'))
+            </script>
+        </div>
 
-        <p>Despite the constant negative ipsum covfefe. You know, it really doesn’t matter what you write as long as you’ve got a young, and beautiful, piece of text.</p>
+        <p>Paragraph 4: You're telling the enemy exactly what you're going to do. No wonder you've been fighting Lorem Ipsum your entire adult life. You're telling the enemy exactly what you're going to do. No wonder you've been fighting Lorem Ipsum your entire adult life.</p>
+
+        <p>Paragraph 5: Despite the constant negative ipsum covfefe. You know, it really doesn’t matter what you write as long as you’ve got a young, and beautiful, piece of text.</p>
     </main>
 
     <hr />
 
     <aside class="sidebar floatsRight">
+        <h3>Sidebar</h3>
         <ul>
             <li>Sidebar Item 1</li>
             <li>Sidebar Item 2</li>
