--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
 <ul>
     <li><a href="complete_configuration.html">Vollständige Konfiguration</a></li>
+    <li><a href="complete_configuration_2.html">Vollständige Konfiguration 2</a></li>
     <li><a href="hockeystick_left.html">Hockeystick Links</a></li>
 </ul>
 
